# static-reload

./: Cargo.toml
src/: main.rs
